--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,6 +6,9 @@ backend:
 media_folder: "static/img"
 public_folder: "/img"
 
+publish_mode: editorial_workflow
+display_url: https://dataadmin.dev
+
 collections:
   - name: "article"
     label: "Article"
@@ -13,7 +16,7 @@ collections:
     create: true
     slug: "{{slug}}"
     editor:
-      preview: false
+      preview: true
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
